k8s/metabase/metabase-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: monitoring
  labels:
    app: metabase
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: metabase
